MEVN-Stack/node-express.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-deployment
  labels:
    app: backend
spec:
  replicas: 5
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: node-express-container
        image: gerrome/mevn-stack-app_server:1
        ports:
        - containerPort: 3000  
---
apiVersion: v1
kind: Service
metadata:
  name: node-express-service
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
  - name: http
    port: 80
    targetPort: 3000
