MEVN-Stack/vuejs.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vuejs-deployment
  labels:
    app: client
spec:
  replicas: 9
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
      - name: vuejs-container
        image: gerrome/mevn-stack-app_client:1
        ports:
        - containerPort: 8080         
---
apiVersion: v1
kind: Service
metadata:
  name: vuejs-service
spec:
  type: ClusterIP
  selector:
    app: client
  ports:
  - name: http
    port: 80
    targetPort: 8080
